<resources>
    <string name="app_name">TP2_CM</string>
    <string name="BemVindo">Bem-vindo(a)!</string>
    <string name="IniciarSessaotexto">Iniciar Sessão para continuar</string>
    <string name="Email">Email</string>
    <string name="PalavraPasse">Palavra-passe</string>
    <string name="EsquecerPalavraPasse">Esqueceu-se da palavra-passe?</string>
    <string name="IniciarSessao">Iniciar Sessão</string>
    <string name="RegistarNovoUtilizador">Novo utilizador?</string>
    <string name="Registar">Registar</string>
    <string name="Classificacoes">Classificações</string>
    <string name="Atividade">Atividade</string>
    <string name="Saude">Saúde</string>
    <string name="Servicos">Serviços</string>
    <string name="Conta">Conta</string>
    <string name="Nomeutilizador">Nome de utilizador</string>
    <string name="Seguidores">Seguidores</string>
    <string name="Aseguir">A seguir</string>
    <string name="Asuaatividade">A sua atividade</string>
    <string name="Alterardados">Alterar dados</string>
    <string name="TerminarSessao">Terminar Sessão</string>
    <string name="Sim">Sim</string>
    <string name="Cancelar">Cancelar</string>
    <string name="MensagemTerminarSessao">Esperamos ver-te em breve! Obrigado!</string>
    <string name="conta" translatable="false">conta</string>
    <string name="paginaRetornoConta">paginaRetornoConta</string>

    <string name="preference_login" translatable="false">LoginSharedPreferences</string>
    <string name="Login_Email">Insira um email</string>
    <string name="Login_Password">Insira a palavra-passe</string>
    <string name="Error_login">Dados incorretos</string>

    <string name="nomeUser" translatable="false">nomeshared</string>
    <string name="LoginShared" translatable="false">loginshared</string>
    <string name="fotoUser" translatable="false">fotoshared</string>
    <string name="Id_LoginUser" translatable="false">idloginuser</string>
    <string name="Iniciar_atividade">Iniciar Atividade</string>
    <string name="terminar_atividade">Terminar Atividade</string>
    <string name="Tempo">Tempo</string>
    <string name="Distancia">Distância</string>
    <string name="Passos">Passos</string>
    <string name="Velocidade_media">Velocidade Média</string>
    <string name="Calorias">Calorias</string>
    <string name="km">KM</string>
    <string name="km_h">KM/H</string>
    <string name="title_activity_mapa_atividade">Map</string>
    <string name="atividade_publicada">Atividade publicada com sucesso!</string>
    <string name="atividade_registada">Atividade registada com sucesso!</string>
    <string name="erro">Erro</string>
    <string name="publicar_atividade">Publicar</string>
    <string name="registar_atividade">Registar</string>

    <string name="Treinador">Treinador Pessoal</string>
    <string name="Nutricionista">Nutricionista</string>
    <string name="Anabela">Anabela Pires</string>
    <string name="Diogo">Diogo Almeida</string>
    <string name="Gonçalo">Gonçalo Santos</string>
    <string name="Sara">Sara Esteves</string>
    <string name="TextoPT">Olá Atletas!  Eu sou a Anabela, sou uma Personal Trainer, especialista certificada em fitness em Portugal, preparada para te ajudar a conquistar os teus maiores objectivos Fit.   Aqui podes escolher o que queres usufruir:  🔄 Visualização de vídeos de treino em replay  🎥 Treinos em directo comigo, onde basta seguir o que estou a fazer  🗣️ Directos interactivos onde conversamos juntos com outros profissionais especialistas esclarecemos as vossas dúvidas para que consigam obter os melhores resultados  🏋️ Dicas exclusivas de treino  Fico à tua espera!</string>
    <string name="OlaAtletas">Olá Atletas!</string>
    <string name="Apresentacao">Eu sou o Diogo, sou um Personal Trainer, especialista certificado em fitness em Portugal, preparado para te ajudar a conquistar os teus maiores objectivos Fit.</string>
    <string name="opc1">Aqui podes escolher o que queres usufruir:</string>
    <string name="opc2">-> Visualização de vídeos de treino em replay</string>
    <string name="opc3">-> Treinos em directo comigo, onde basta seguir o que estou a fazer</string>
    <string name="opc4">-> Dicas exclusivas de treino</string>
    <string name="opc5">Fico à tua espera!</string>
    <string name="base">BASE</string>
    <string name="premium">PREMIUM</string>
    <string name="elite">ELITE</string>
    <string name="sete">7€</string>
    <string name="dezassete">17€</string>
    <string name="cem">100€</string>
    <string name="pormes">Por mês</string>
    <string name="textoBase">BIBLIOTECA DE VIDEOS DE TREINO  Semanalmente terás acesso a novos videos de treino, tais como replay dos treinos que faremos em directo.</string>
    <string name="textoPremium">Todos os recursos do Pack anterior. Treino Live de 16 e 20 minutos Treinos e Desafios, estilo aula de grupo, em directo comigo de 16 e 20 minutos onde podes fazer onde quiseres. (4 lives por semana)  Publicações Exclusivas</string>
    <string name="textoElite">ATENÇÃO: VAGAS LIMITADAS  Todos os recursos dos Packs anteriores + Acompanhamento Online Comigo</string>
    <string name="Aderir">Aderir</string>
    <string name="Duvida">Alguma dúvida?</string>
    <string name="mensagem">Enviar mensagem</string>

    <string name="BPM">       BPM</string>
    <string name="Pesoideal">PESO IDEAL</string>
    <string name="BPM0">--</string>
    <string name="Homem">Homem</string>
    <string name="Mulher">Mulher</string>
    <string name="IMC">IMC</string>



    <string name="place_finger">Place finger on camera lens</string>
    <string name="bpm">bpm</string>
    <string name="how_it_works">How it works</string>
    <string name="defaultbpm">000</string>
    <string name="ok">OKay</string>
    <string name="measure_title">Measure your Heart Rate</string>
    <string name="measure_hint">Lightly place your index finger over the camera lens on back of your phone. Make sure the lens and flash are fully covered.</string>
    <string name="image">image</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="your_heart_rate">Your Heart Rate</string>
    <string name="try_again">Try Again</string>

    <string name="failed">Failed</string>
    <string name="calculate">CALCULATE</string>
    <string name="history">HISTORY</string>
    <string name="Medirpulsacao">Medir pulsação por minuto</string>
    <string name="Medir">Medir</string>
    <string name="amigos">AMIGOS</string>
    <string name="globais">GLOBAIS</string>
    <string name="tania">Tânia Silva</string>
    <string name="david">David Verde</string>
    <string name="joao">João lopes</string>
    <string name="rita">Rita Melo</string>
    <string name="glob1">Ruben Gonçalves</string>
    <string name="glob2">Rebeca Catita</string>
    <string name="glob3">António Teixeira</string>
    <string name="glob4">Eduarda Amorim</string>
    <string name="km_totals">Km totais: 12,8km</string>
    <string name="passos_totals">Passos totais: 17.792</string>
    <string name="medalha_epic">Medalhas: EPIC</string>
    <string name="medalha_dedicado">Medalhas: Atleta dedicado</string>
    <string name="medalha_bolt">Medalhas: Bolt</string>
    <string name="medalha_master_epic">Medalhas: Master EPIC</string>
    <string name="medalha_pokepic">Medalhas: Poképic</string>
    <string name="mensagens">Mensagens</string>
    <string name="selectUser">Selecione os Utilizadores</string>
    <string name="enterMessage">Escrever mensagem ...</string>
</resources>