<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TreinadorPessoal">

    <Button
        android:id="@+id/button6"
        android:layout_width="145dp"
        android:layout_height="25dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/botaoredondo"
        android:bottomLeftRadius="50dp"
        android:bottomRightRadius="50dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/mensagem"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:topLeftRadius="50dp"
        android:topRightRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="59dp"
        android:layout_height="15dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/botaoredondo"
        android:bottomLeftRadius="50dp"
        android:bottomRightRadius="50dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Aderir"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:topLeftRadius="50dp"
        android:topRightRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView37"
        app:layout_constraintEnd_toEndOf="@+id/textView37"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/textView37" />

    <Button
        android:id="@+id/button4"
        android:layout_width="59dp"
        android:layout_height="15dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/botaoredondo"
        android:bottomLeftRadius="50dp"
        android:bottomRightRadius="50dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Aderir"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:topLeftRadius="50dp"
        android:topRightRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView36"
        app:layout_constraintEnd_toEndOf="@+id/textView36"
        app:layout_constraintStart_toStartOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="111dp"
        android:layout_height="243dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/botaocantosredondos"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/elite"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="111dp"
        android:layout_height="243dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/botaocantosredondos"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/premium"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="334dp"
        android:layout_height="51dp"
        android:layout_marginTop="164dp"
        android:text="@string/opc3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="328dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:text="@string/OlaAtletas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="361dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:text="@string/Apresentacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="337dp"
        android:layout_height="31dp"
        android:layout_marginTop="92dp"
        android:text="@string/opc1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="337dp"
        android:layout_height="31dp"
        android:layout_marginTop="128dp"
        android:text="@string/opc2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="332dp"
        android:layout_height="27dp"
        android:layout_marginTop="236dp"
        android:text="@string/opc5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="332dp"
        android:layout_height="27dp"
        android:layout_marginTop="204dp"
        android:text="@string/opc4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barralateral" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView16"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/h2"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Diogo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="28dp"
        android:onClick="voltarServicos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView

        android:id="@+id/textView35"
        android:layout_width="111dp"
        android:layout_height="243dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/botaocantosredondos"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/base"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="25dp"
        android:layout_height="18dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sete"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/textView35"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="@+id/textView35"
        app:layout_constraintTop_toTopOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/dezassete"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/textView36"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/textView36"
        app:layout_constraintTop_toTopOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/cem"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/textView37"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/textView37"
        app:layout_constraintTop_toTopOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/pormes"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView36"
        app:layout_constraintStart_toStartOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/pormes"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView35"
        app:layout_constraintStart_toStartOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/pormes"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView37"
        app:layout_constraintStart_toStartOf="@+id/textView37"
        app:layout_constraintTop_toBottomOf="@+id/textView41" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="87dp"
        android:layout_height="112dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/roboto"
        android:text="@string/textoBase"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="@+id/textView35"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="88dp"
        android:layout_height="128dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/roboto"
        android:text="@string/textoPremium"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView36"
        app:layout_constraintEnd_toEndOf="@+id/textView36"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="87dp"
        android:layout_height="112dp"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/roboto"
        android:text="@string/textoElite"
        android:textColor="#000000"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView37"
        app:layout_constraintEnd_toEndOf="@+id/textView37"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="@+id/textView37" />

    <Button
        android:id="@+id/button3"
        android:layout_width="59dp"
        android:layout_height="15dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/botaoredondo"
        android:bottomLeftRadius="50dp"
        android:bottomRightRadius="50dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Aderir"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:topLeftRadius="50dp"
        android:topRightRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="@+id/textView35"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Duvida"
        android:textColor="#000000"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:srcCompat="@drawable/insta" />

</androidx.constraintlayout.widget.ConstraintLayout>